--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.5.10"
   },
   "devDependencies": {
+    "@types/lodash": "4.17.12",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "less": "4.2.0",
