--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "1.7.7",
     "element-plus": "^2.8.6",
     "lodash": "^4.17.21",
     "vue": "^3.5.10"
