--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "1.7.7",
@@ -18,6 +19,7 @@
     "@types/lodash": "4.17.12",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
+    "gh-pages": "6.2.0",
     "less": "4.2.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
