--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy:gh": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "axios": "1.7.7",
